# EsameLaboratorio

./: .gitignore  CMakeLists.txt  CollezioneNote.cpp  CollezioneNote.h  CollezioneNoteImportanti.cpp  CollezioneNoteImportanti.h  Nota.cpp  Nota.h  Observer.cpp  Observer.h  PaginaHome.cpp  PaginaHome.h  Subject.cpp  Subject.h  main.cpp  tracciaEsame
test/: CMakeLists.txt  RunAllTest.cpp  RunAllTest.h  TestCollezione.cpp  TestCollezione.h  TestPaginaHome.cpp  TestPaginaHome.h
